force-app/main/default/objects/Player__c/fields/IsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUser__c</fullName>
    <formula>$User.Id == User__c</formula>
    <label>Is Current User?</label>
    <type>Checkbox</type>
</CustomField>