force-app/main/default/objects/Player__c/fields/Move__c.field-meta.xml
<CustomField>
    <fullName>Move__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Move</label>
    <referenceTo>Move__c</referenceTo>
    <relationshipLabel>Players</relationshipLabel>
    <relationshipName>Players</relationshipName>
    <type>Lookup</type>
</CustomField>