force-app/main/default/objects/Player__c/fields/Opponent__c.field-meta.xml
<CustomField>
    <fullName>Opponent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opponent</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Opponents</relationshipLabel>
    <relationshipName>Opponents</relationshipName>
    <type>Lookup</type>
</CustomField>