force-app/main/default/objects/Player__c/fields/OpponentName__c.field-meta.xml
<CustomField>
    <fullName>OpponentName__c</fullName>
    <formula>Opponent__r.User__r.FirstName &amp; &apos; &apos; &amp; Opponent__r.User__r.LastName</formula>
    <label>Opponent Name</label>
    <type>Text</type>
</CustomField>