force-app/main/default/objects/Player__c/fields/PlayerMove__c.field-meta.xml
<CustomField>
    <fullName>PlayerMove__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player Move</label>
    <referenceTo>PlayerMove__c</referenceTo>
    <relationshipLabel>Players</relationshipLabel>
    <relationshipName>Players</relationshipName>
    <type>Lookup</type>
</CustomField>