force-app/main/default/objects/Player__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Played</fullName>
            </value>
            <value>
                <fullName>Winner</fullName>
            </value>
            <value>
                <fullName>Loser</fullName>
            </value>
            <value>
                <fullName>Tie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>