force-app/main/default/objects/Player__c/listViews/My_Calls_to_Battle.listView-meta.xml
<ListView>
    <fullName>My_Calls_to_Battle</fullName>
    <columns>Game__c</columns>
    <columns>OpponentName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCurrentUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>My Calls to Battle</label>
</ListView>