force-app/main/default/objects/Player__c/listViews/My_Defeats.listView-meta.xml
<ListView>
    <fullName>My_Defeats</fullName>
    <columns>Game__c</columns>
    <columns>OpponentName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCurrentUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Loser</value>
    </filters>
    <label>My Defeats</label>
</ListView>