force-app/main/default/objects/Player__c/listViews/My_Opponent_Approaches.listView-meta.xml
<ListView>
    <fullName>My_Opponent_Approaches</fullName>
    <columns>OpponentName__c</columns>
    <columns>Game__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCurrentUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Played</value>
    </filters>
    <label>My Opponent Approaches</label>
</ListView>